--- a/wrapper.html
+++ b/wrapper.html
@@ -19,7 +19,7 @@
       top: 0;
       left: 0;
       transform-origin: top left;
-      transform: scale(SCALE_VALUE);
+      transform: scale(0.638);
     }
     body {
       margin: 0;
@@ -43,4 +43,5 @@
 
 </body>
 </html>
+
 
